--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@tanstack/react-query": "^5.52.2",
     "axios": "^1.7.5",
     "next": "14.2.5",
     "react": "^18",
