--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@hookform/resolvers": "^3.9.0",
     "@tanstack/react-query": "^5.52.2",
     "axios": "^1.7.5",
+    "loadsh": "^0.0.4",
+    "lodash": "^4.17.21",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "react": "^18",
@@ -21,6 +23,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
