--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "react-select": "^5.8.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
