--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^5.3.0",
     "react-select": "^5.8.0",
     "swiper": "^11.1.14",
+    "vlibras-nextjs": "^1.1.2",
     "yup": "^1.4.0"
   },
   "devDependencies": {
